--- a/app/src/main/res/layout/fragment_1.xml
+++ b/app/src/main/res/layout/fragment_1.xml
@@ -159,7 +159,7 @@
             android:background="#59B683"
             android:textSize="18sp"
             android:id="@+id/l2"
-            android:text="服务签到"
+            android:text="巡视签到"
             android:layout_marginTop="16dp"
             android:layout_marginRight="40dp"
             android:layout_width="match_parent"
@@ -171,7 +171,7 @@
             android:background="#59B683"
             android:textSize="18sp"
             android:id="@+id/l3"
-            android:text="下班交接"
+            android:text="下班签到"
             android:layout_marginTop="16dp"
             android:layout_marginRight="40dp"
             android:layout_width="match_parent"
@@ -186,18 +186,37 @@
         android:textColor="#555555"
         android:text="告警信息"
         android:id="@+id/klkl"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintTop_toBottomOf="@+id/renwull"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
+    <TextView
+        android:textSize="14sp"
+        android:textColor="#818080"
+        android:text="0"
+        android:id="@+id/gdfgd"
+        app:layout_constraintTop_toTopOf="@+id/klkl"
+        app:layout_constraintBottom_toBottomOf="@+id/klkl"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/renwull"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
-        android:layout_marginTop="12dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/klkl"
+        android:layout_marginBottom="4dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
