--- a/app/src/main/res/layout/unfinsh_fragment1.xml
+++ b/app/src/main/res/layout/unfinsh_fragment1.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="84dp"
+    android:layout_height="wrap_content"
+    android:minHeight="82dp"
     android:background="@drawable/yinying1"
     android:layout_marginTop="2dp"
     android:layout_marginLeft="6dp"
@@ -9,85 +10,40 @@
     android:layout_marginBottom="2dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:gravity="center_vertical"
+    <TextView
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:textSize="14sp"
+        android:text="11:00 ~ 12:00"
+        android:id="@+id/time"
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:layout_marginStart="14dp"
+        android:textColor="#FF222222"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:textSize="14sp"
-            android:text="1"
-            android:textStyle="bold"
-            android:id="@+id/title"
-            android:layout_marginLeft="14dp"
-            android:textColor="#FF222222"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
-        <TextView
-            android:textSize="12sp"
-            android:text="时间: 11:00 ~ 12:00"
-            android:id="@+id/time"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="14dp"
-            android:textColor="#FF222222"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+    <com.qmuiteam.qmui.widget.QMUIFontFitTextView
+        app:qmui_maxTextSize="13sp"
+        app:qmui_minTextSize="8sp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="4dp"
+        app:layout_constraintLeft_toRightOf="@+id/time"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="13sp"
+        android:text="床"
+        android:gravity="end|center_vertical"
+        android:id="@+id/title"
+        android:layout_marginEnd="14dp"
+        android:textColor="#9C9C9C"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
 
-        <TextView
-            android:textSize="12sp"
-            android:text="长者: 马冬梅"
-            android:id="@+id/name"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="14dp"
-            android:textColor="#FF222222"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
-    </LinearLayout>
 
-        <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:textSize="12sp"
-            android:text="床"
-            android:id="@+id/ffgg"
-            android:layout_marginRight="14dp"
-            android:textColor="#FFA7A7A7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/ffgg"
-            android:textSize="18sp"
-            android:text="F101"
-            android:textStyle="bold"
-            android:id="@+id/number"
-            android:layout_marginRight="8dp"
-            android:textColor="#FF222222"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <View
-        android:background="@drawable/zidonghuoqulv"
-        android:layout_width="6dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        android:id="@+id/back_bg"
-        android:layout_height="match_parent"/>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
