--- a/app/src/main/res/layout/dialog_help2.xml
+++ b/app/src/main/res/layout/dialog_help2.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
+        android:gravity="center"
         android:layout_gravity="center_horizontal"
         android:lineSpacingExtra="3dp"
         android:layout_marginLeft="20dp"
@@ -40,7 +41,7 @@
 
         <TextView
             android:id="@+id/failure_ok"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
             android:background="@drawable/bg_dialog_lv"
             android:gravity="center"
