--- a/app/src/main/res/layout/fdsfsdrewrw.xml
+++ b/app/src/main/res/layout/fdsfsdrewrw.xml
@@ -6,8 +6,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="14dp"
         android:layout_marginStart="16dp"
         android:id="@+id/jingbao"
         app:layout_constraintTop_toTopOf="parent"
@@ -18,20 +16,40 @@
         android:layout_height="18dp"/>
 
     <TextView
+        android:id="@+id/time"
+        android:text="0"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        android:textSize="14sp"
+        android:textColor="#999999"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="wrap_content"
+        android:gravity="center_vertical|end"
+        android:layout_height="match_parent"/>
+
+    <TextView
         android:id="@+id/title"
         android:text="0"
         android:textSize="14sp"
         android:textColor="#333333"
         android:layout_marginStart="12dp"
-        android:layout_marginEnd="16dp"
-        android:ellipsize="end"
+        android:layout_marginEnd="12dp"
+        android:singleLine="true"
+        android:scrollHorizontally="true"
+        android:ellipsize="marquee"
+        android:marqueeRepeatLimit="marquee_forever"
+        android:focusable="true"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/jingbao"
+        app:layout_constraintRight_toLeftOf="@+id/time"
         android:layout_width="0dp"
         android:gravity="center_vertical"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
