--- a/app/src/main/res/layout/fragment_4.xml
+++ b/app/src/main/res/layout/fragment_4.xml
@@ -81,13 +81,12 @@
         android:layout_width="match_parent"
         android:layout_height="112dp">
 
-        <com.qmuiteam.qmui.widget.QMUIRadiusImageView
-            android:layout_marginLeft="16dp"
+        <ImageView
+            android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            app:qmui_corner_radius="40dp"
             android:id="@+id/head"
+            android:scaleType="fitXY"
             android:src="@drawable/defo_bg"
-            app:qmui_border_width="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_width="80dp"
